# test_service_for_product_management

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app_blogs/: admin.py  apps.py  models.py  serializers.py  views.py
app_blogs/migrations/: 0001_initial.py  0002_initial.py
app_brands/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_brands/migrations/: 0001_initial.py  0002_alter_brands_options.py  (+1 more)
app_category/: admin.py  apps.py  documents.py  lang_utils.py  models.py  serializers.py  serializers_v2.py  urls.py  views.py
app_descriptions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_discounts/: admin.py  apps.py  models.py
app_elastic/: apps.py  urls.py  views.py
app_external_products/: admin.py  apps.py  city_choices.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
app_kaspi/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
app_kaspi/migrations/: 0001_initial.py  (+1 more)
app_manage_banners/: admin.py  apps.py  models.py
app_manager_tags/: admin.py  apps.py  models.py  serializers.py
app_orders/: FastAPIDatabaseRouter.py  OrdersApiAdapter.py  admin.py  apps.py  models.py  urls.py  views.py
app_products/: ProductsFiltering.py  ProductsQueryFactory.py  SmartGlobalSearch.py  admin.py  apps.py  documents.py  forms.py  models.py  serializers.py  serializers_v2.py  tasks.py  urls.py  urls_v2.py  utils.py  views.py  views_v2.py
app_reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_sales_points/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
app_services/: admin.py  apps.py  models.py  serializers.py
app_specifications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
certs/: public.pem
core/: RabbitMQRepository.py  TranslationDecorator.py  TranslationUpdateService.py  celery.py  lang_utils.py  mixins.py  router.py  settings.py  urls.py
(+57 files in other folders)
